--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <button onclick="click()"> click me</button>
-    <script src="script.js"></script>
+    <script>
+    function click() {
+            alert("hey button was clicked")
+        }
+    </script>
 </body>
+
 </html>
